Fix 'Apply Updates' button growing vertically when search input is open
Prevent the apply updates button from being squashed horizontally and
thus wrapping onto multiple lines

--- a/h/static/styles/top-bar.scss
+++ b/h/static/styles/top-bar.scss
@@ -70,6 +70,7 @@
 // on the current page and applies them when clicked
 .top-bar__apply-update-btn {
   display: inline-block;
+  flex-shrink: 0;
   margin-right: 5px;
 
   background-color: $brand;
